corrected spelling errors, made github link visible

--- a/src/app.css
+++ b/src/app.css
@@ -70,6 +70,10 @@ footer {
 	color: #fff;
 }
 
+footer a {
+	color: #85bcef;
+}
+
 /*footer a {*/
 	/*color: #f5f5f5;*/
 /*}*/
